Fix deploy command not run

--- a/circle.yml
+++ b/circle.yml
@@ -11,25 +11,20 @@ machine:
     version: "3.5.2"
 test:
   override:
-    - "sh generate.sh"
-
+    - "sh generate.sh || exit 1"
+    - |
+        if [ "$CIRCLE_BRANCH" = "master" ]; then
+             git remote add ci "$REMOTE";
+             git config --global user.email "khang.neon.1997@gmail.com";
+             git config --global user.name "Circle CI";
+             git add --all . ;
+             git commit -m "[skip ci] Update document $CIRCLE_BUILD_NUM";
+             git push -f ci master:gh-pages || true; # ignore push error
+        fi;
 general:
   branches:
     only:
       - master
 
-deployment:
-  master:
-    branch: master
-    owner: khang-nt
-    commands:
-      - |
-          if [ "$CIRCLE_BRANCH" = "master" ]; then
-               git remote add ci "$REMOTE";
-               git config --global user.email "khang.neon.1997@gmail.com";
-               git config --global user.name "Circle CI";
-               git add --all . ;
-               git commit -m "[skip ci] Update document $CIRCLE_BUILD_NUM";
-               git push -f ci master:gh-pages || true; # ignore push error
-          fi;
+      
 
