Update company name

--- a/docs/config.json
+++ b/docs/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "MStage.io",
+    "title": "mStage.io",
     "tagline": "Documentation for UserKit and LoginKit SDK",
     "html": {
         "theme": "daux-blue",
